--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -24,7 +24,7 @@ archives:
     rlcp: true
 nfpms:
   - vendor: pomdtr
-    homepage: https://github.com/pomdtr/survey
+    homepage: https://github.com/pomdtr/ask
     maintainer: Achille Lacoin
     description: Generate powerful UIs from simple scripts written in any language.
     license: MIT
@@ -44,13 +44,13 @@ checksum:
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
 brews:
-  - name: survey
-    homepage: https://github.com/pomdtr/survey
+  - name: ask
+    homepage: https://github.com/pomdtr/ask
     tap:
       owner: pomdtr
       name: homebrew-tap
     install: |-
-      bin.install "survey"
-      bash_completion.install "completions/survey.bash"
-      zsh_completion.install "completions/survey.zsh"
-      fish_completion.install "completions/survey.fish"
+      bin.install "ask"
+      bash_completion.install "completions/ask.bash"
+      zsh_completion.install "completions/ask.zsh"
+      fish_completion.install "completions/ask.fish"
