--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -4,9 +4,9 @@ before:
     - go mod tidy
     - rm -rf completions
     - mkdir completions
-    - sh -c 'go run . completion "bash" >./completions/{{ .ProjectName }}.bash'
-    - sh -c 'go run . completion "zsh" >./completions/{{ .ProjectName }}.zsh'
-    - sh -c 'go run . completion "fish" >./completions/{{ .ProjectName }}.fish'
+    - sh -c 'go run . --generate-completions "bash" >./completions/{{ .ProjectName }}.bash'
+    - sh -c 'go run . --generate-completions "zsh" >./completions/{{ .ProjectName }}.zsh'
+    - sh -c 'go run . --generate-completions "fish" >./completions/{{ .ProjectName }}.fish'
 changelog:
   skip: true
 builds:
